improved ui of details page, home page and header

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sawarabi+Gothic&display=swap');
+
 
 .patrick-hand-regular {
   font-family: "Patrick Hand", cursive;
